smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-syntax-error.smithy
// Parse error at line 2, column 11 near `not.valid.trailing.`: Invalid namespace name
namespace not.valid.trailing.
